WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
45848
Background doesn't draw when entering accelerated compositing
https://bugs.webkit.org/show_bug.cgi?id=45848
Summary
Background doesn't draw when entering accelerated compositing
Simon Fraser (smfr)
Reported
2010-09-15 16:36:31 PDT
When you load
http://webkit.org/blog-files/3d-transforms/morphing-cubes.html
, the background doesn't redraw until you resize the window or interact with the page.
Attachments
Patch
(5.73 KB, patch)
2010-09-30 13:56 PDT
,
Simon Fraser (smfr)
darin
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Simon Fraser (smfr)
Comment 1
2010-09-15 16:36:49 PDT
<
rdar://problem/8436167
>
Simon Fraser (smfr)
Comment 2
2010-09-30 13:56:33 PDT
Created
attachment 69378
[details]
Patch
Simon Fraser (smfr)
Comment 3
2010-09-30 16:19:32 PDT
http://trac.webkit.org/changeset/68851
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug