WebKit2/WebProcess/WebPage/mac/LayerBackedDrawingAreaMac.mm
@@ -42,12 +42,14 @@ namespace WebKit {
 
 void LayerBackedDrawingArea::platformInit()
 {
+    setUpUpdateLayoutRunLoopObserver();
+
     [m_backingLayer->platformLayer() setGeometryFlipped:YES];
 #if HAVE(HOSTED_CORE_ANIMATION)
     attachCompositingContext();
 #endif
 
-    setUpUpdateLayoutRunLoopObserver();
+    scheduleCompositingLayerSync();
 }
 
 void LayerBackedDrawingArea::platformClear()
@@ -70,8 +72,6 @@ void LayerBackedDrawingArea::attachCompositingContext()
     if (m_attached)
         return;
 
-    m_backingLayer->syncCompositingStateForThisLayerOnly();
-        
     m_attached = true;
 
 #if HAVE(HOSTED_CORE_ANIMATION)
@@ -87,7 +87,8 @@ void LayerBackedDrawingArea::attachCompositingContext()
 void LayerBackedDrawingArea::detachCompositingContext()
 {
     m_backingLayer->removeAllChildren();
-    m_backingLayer->syncCompositingStateForThisLayerOnly();
+
+    scheduleCompositingLayerSync();
 }
 
 void LayerBackedDrawingArea::setRootCompositingLayer(WebCore::GraphicsLayer* layer)
@@ -95,7 +96,8 @@ void LayerBackedDrawingArea::setRootCompositingLayer(WebCore::GraphicsLayer* lay
     m_backingLayer->removeAllChildren();
     if (layer)
         m_backingLayer->addChild(layer);
-    m_backingLayer->syncCompositingStateForThisLayerOnly();
+
+    scheduleCompositingLayerSync();
 }
 
 void LayerBackedDrawingArea::scheduleCompositingLayerSync()
@@ -110,6 +112,8 @@ void LayerBackedDrawingArea::scheduleCompositingLayerSync()
 
 void LayerBackedDrawingArea::syncCompositingLayers()
 {
+    m_backingLayer->syncCompositingStateForThisLayerOnly();
+
     bool didSync = m_webPage->corePage()->mainFrame()->view()->syncCompositingStateRecursive();
     if (!didSync) {
     
@@ -132,6 +136,8 @@ void LayerBackedDrawingArea::setUpUpdateLayoutRunLoopObserver()
 void LayerBackedDrawingArea::scheduleUpdateLayoutRunLoopObserver()
 {
     CFRunLoopRef currentRunLoop = CFRunLoopGetCurrent();
+    CFRunLoopWakeUp(currentRunLoop);
+
     if (CFRunLoopContainsObserver(currentRunLoop, m_updateLayoutRunLoopObserver.get(), kCFRunLoopCommonModes))
         return;
 
